Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -83,7 +83,7 @@
         .hero-text {
             font-size: 6vw;
             max-font-size: 2rem;
-            border: 2px solid white; /* Added border to see the element area */
+            /* border: 2px solid white; Added border to see the element area */
             z-index: 1; /* Ensure text is above the canvas */
         }
 
@@ -92,7 +92,7 @@
             position: relative;
             vertical-align: middle;
             line-height: 1.5;
-            border: 2px solid white; /* Added border to see the element area */
+            /* border: 0.01px solid white; Added border to see the element area */
             z-index: 1; /* Ensure text is above the canvas */
         }
 
@@ -104,7 +104,9 @@
             min-width: 8ch;
             vertical-align: middle;
             line-height: 1;
-            border: 2px solid white; /* Added border to see the element area */
+            /* border: 0.02px solid white; Added border to see the element area */
+
+
         }
 
         #typewriter::after {
@@ -132,7 +134,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border: 2px solid white; /* Added border to see the element area */
+            /* border: 20px solid white;  */
             z-index: 1; /* Ensure button is above the canvas */
             margin-bottom: 10vh;
         }
@@ -225,14 +227,14 @@
             border-radius: 30px;
         }
 
-        @media (min-width: 480px) {
+        @media (min-width: 460px) {
             .hero-text {
-                font-size: 3.5vw;
+                font-size: 4.9vw;
             }
 
             .glowing-ring {
-                width: 55vw;
-                height:55vw;
+                width: 65vw;
+                height:65vw;
                 margin-top: 90px;
             }
 
