Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -227,7 +227,7 @@
             border-radius: 30px;
         }
 
-        @media (min-width: 460px) {
+        @media (min-width: 320px) {
             .hero-text {
                 font-size: 4.9vw;
             }
@@ -244,8 +244,45 @@
                 margin-top: -190px;
             }
         }
+        @media (min-width: 450px) and (max-width: 659px) {
+            .hero-text {
+                font-size: 4.9vw;
+            }
 
-        @media (min-width: 768px) {
+            .glowing-ring {
+                width: 55vw;
+                height:55vw;
+                margin-top: 90px;
+            }
+
+            .cta-button-container {
+                width: 50vw;
+                height: 12vw;
+                margin-top: -190px;
+            }
+        }
+        @media (min-width: 660px) {
+            .hero-text {
+                font-size: 4.1vw;
+                f
+            }
+
+            .glowing-ring {
+                width: 50vw;
+                height:50vw;
+                margin-top: 90px;
+            }
+
+            .cta-button-container {
+                width: 50vw;
+                height: 10vw;
+                margin-top: -290px;
+            }
+        }
+
+
+
+        @media (min-width: 725px) {
             .hero-text {
                 font-size: 3vw;
             }
