Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -227,7 +227,7 @@
             border-radius: 30px;
         }
 
-        @media (min-width: 320px) and (max-width: 449px) {
+        /* @media (min-width: 320px) and (max-width: 449px) {
             .hero-text {
                 font-size: 4.9vw;
             }
@@ -243,7 +243,7 @@
                 height: 12vw;
                 margin-top: -190px;
             }
-        }
+        } */
         @media (min-width: 450px) and (max-width: 659px) {
             .hero-text {
                 font-size: 4.9vw;
