Hero section updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Chatbot from '../components/Chatbot.astro';
     <Navbar />
 
     <section id="home">
-      <Hero />
+      <!-- <Hero /> -->
     </section>
 
     <section id="services">
