--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro';
-import Hero from '../components/Hero.astro';
+// import Hero from '../components/Hero.astro';
 import Services from '../components/Services.astro';
 import Work from '../components/Work.astro';
 import CarouselTrust from '../components/CarouselTrust.astro';
