--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -38,6 +38,9 @@ const articles = [
 </section>
 
 <style>
+  * {
+  outline: 5px solid rgb(255, 162, 0) !important; /* Highlight all elements */
+}
   .blog-section {
     padding: 50px 0;
     background-color: #111;
@@ -51,7 +54,7 @@ const articles = [
   .section-title {
     font-size: 4.5rem;
     font-weight: 200;
-    letter-spacing: 10px;
+    letter-spacing: 1px;
     /* animation:glow1 2s infinite alternate ;
     animation: ; */
     /* animation-duration: 70s; */
@@ -73,7 +76,7 @@ const articles = [
 
   @media (max-width: 768px) {
     .section-title {
-      font-size: 3.2rem;
+      font-size: 2.9rem;
       font-weight: 800;
     }
   }
