--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -23,6 +23,9 @@
 </section>
 
 <style>
+  * {
+  outline: 10px solid red !important; /* Highlight all elements */
+}
   .contact-section {
     padding: 50px 0;
     background-color: #111;
