--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from '../components/Navbar.astro';
 // import Hero from '../components/Hero.astro';
-import Services from '../components/Services.astro';
+// import Services from '../components/Services.astro';
 import Work from '../components/Work.astro';
 import CarouselTrust from '../components/CarouselTrust.astro';
 import Process from '../components/Process.astro';
@@ -29,7 +29,7 @@ import Chatbot from '../components/Chatbot.astro';
     </section>
 
     <section id="services">
-      <Services />
+      <!-- <Services /> -->
     </section>
 
     <section id="work">
