--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,11 +36,11 @@ import Chatbot from '../components/Chatbot.astro';
       <!-- <Work /> -->
     </section>
 
-    <CarouselTrust />
-    <Process />
+    <!-- <CarouselTrust /> -->
+    <!-- <Process /> -->
     <BlogPosts />
-    <Testimonials />
-    <Contact />
+    <!-- <Testimonials /> -->
+    <!-- <Contact /> -->
     <Footer />
     <Chatbot />
   </body>
