--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,8 +39,8 @@ import Chatbot from '../components/Chatbot.astro';
     <!-- <CarouselTrust /> -->
     <!-- <Process /> -->
     <BlogPosts />
-    <!-- <Testimonials /> -->
-    <Contact />
+    <Testimonials />
+    <!-- <Contact /> -->
     <Footer />
     <Chatbot />
   </body>
