Hero section updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Chatbot from '../components/Chatbot.astro';
       <!-- <Work /> -->
     </section>
 
-    <!-- <CarouselTrust /> -->
+    <CarouselTrust />
     <!-- <Process /> -->
     <BlogPosts />
     <Testimonials />
