Hero section updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import Chatbot from '../components/Chatbot.astro';
     </section>
 
     <CarouselTrust />
-    <!-- <Process /> -->
+    <Process />
     <BlogPosts />
     <Testimonials />
     <!-- <Contact /> -->
