Hero section updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Navbar from '../components/Navbar.astro';
-// import Hero from '../components/Hero.astro';
-// import Services from '../components/Services.astro';
-// import Work from '../components/Work.astro';
+import Hero from '../components/Hero.astro';
+import Services from '../components/Services.astro';
+import Work from '../components/Work.astro';
 import CarouselTrust from '../components/CarouselTrust.astro';
 import Process from '../components/Process.astro';
 import BlogPosts from '../components/BlogPosts.astro';
@@ -33,7 +33,7 @@ import Chatbot from '../components/Chatbot.astro';
     </section>
 
     <section id="work">
-      <!-- <Work /> -->
+      <Work />
     </section>
 
     <CarouselTrust />
