--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Chatbot from '../components/Chatbot.astro';
     </section>
 
     <section id="services">
-      <!-- <Services /> -->
+      <Services />
     </section>
 
     <section id="work">
