Hero section updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ import Chatbot from '../components/Chatbot.astro';
     <Navbar />
 
     <section id="home">
-      <!-- <Hero /> -->
+      <Hero />
     </section>
 
     <section id="services">
-      <Services />
+      <!-- <Services /> -->
     </section>
 
     <section id="work">
