--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Chatbot from '../components/Chatbot.astro';
     <Process />
     <BlogPosts />
     <Testimonials />
-    <!-- <Contact /> -->
+    <Contact />
     <Footer />
     <Chatbot />
   </body>
