Hero section updated

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,7 +24,7 @@
 
 <style>
   * {
-  outline: 10px solid red !important; /* Highlight all elements */
+  outline: 1px solid red !important; /* Highlight all elements */
 }
   .contact-section {
     padding: 50px 0;
@@ -66,7 +66,7 @@
   }
 
   .contact-container {
-    width: 90%;
+    width: 80%;
     max-width: 900px;
     /* height: 450px; */
     background: rgba(255, 255, 255, 0.1);
@@ -82,10 +82,13 @@
   .contact-form {
     display: flex;
     flex-direction: column;
+    /* margin-right: 20px; */
   }
 
   .form-group {
     margin-bottom: 15px;
+    margin-right: 20px;
+
   }
 
   .form-group label {
