Hero section updated

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -62,6 +62,9 @@
     .connect-text {
       font-size: 1rem;
     }
+    /* .form-group{
+    margin-right: 200px;
+  } */
 
   }
 
@@ -107,12 +110,14 @@
     color: #fff;
     font-size: 1rem;
     resize: none;
+    /* margin-right: 400px; */
   }
 
   .form-group input:focus,
   .form-group textarea:focus {
     outline: none;
     background: rgba(255, 255, 255, 0.3);
+
   }
 
   .cta-button {
@@ -223,12 +228,12 @@
 
   @media (min-width: 1024px) {
     .contact-container{
-      width: 8%;
+      width: 90%;
     max-width: 900px;
     }
     .form-group input,
   .form-group textarea {
-    width: 9%;
+    width: 90px;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -237,10 +242,13 @@
     font-size: 1rem;
     resize: none;
   }
+  /* .form-group{
+    margin-: 200px;
+  } */
 
   }
 
-  @media (min-width: 480px)  {
+  @media (min-width: 478px)  {
     .contact-container{
       width: 85%;
     max-width: 900px;
@@ -255,6 +263,9 @@
     color: #fff;
     font-size: 1rem;
     resize: none;
+  }
+  .form-group{
+    margin-right: 2px;
   }
   }
 
