Hero section updated

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -368,6 +368,20 @@
         margin-top: -190px;
       }
     }
+    @media (max-width: 430px){
+      .card{
+        width: 100%;
+      }
+
+      .container{
+        flex-direction: column;
+       width: 100% ;
+      }
+      .title{
+        font-size: 4rem;
+      }
+
+    }
   </style>
 </div>
 
