--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -247,14 +247,15 @@
                 margin-top: -190px;
             }
         } */
-        @media (min-width: 400px) and (max-width: 659px) {
+        @media (max-width: 430px) {
             .hero-text {
                 font-size: 4.9vw;
+                width: 95%;
             }
 
             .glowing-ring {
-                width: 55vw;
-                height:55vw;
+                width: 300px;
+                height:300px;
                 margin-top: 90px;
             }
 
@@ -264,26 +265,6 @@
                 margin-top: -190px;
             }
         }
-        @media (min-width: 660px) {
-            .hero-text {
-                font-size: 4.1vw;
-                f
-            }
-
-            .glowing-ring {
-                width: 50vw;
-                height:50vw;
-                margin-top: 90px;
-            }
-
-            .cta-button-container {
-                width: 50vw;
-                height: 10vw;
-                margin-top: -290px;
-            }
-        }
-
-
 
         @media (min-width: 725px) {
             .hero-text {
