--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -17,7 +17,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <!-- Import global styles -->
     <style>
       main {
-        width: calc(100% - 2em);
+        width: calc(100% - 0em);
         max-width: 100%;
         margin: 0;
         position: relative;
@@ -53,7 +53,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         margin: auto;
         padding: 1em;
         color: rgb(var(--gray-dark));
-        background: rgba(255, 255, 255, 0.5);
+        background: rgba(255, 255, 255, 0.566);
         backdrop-filter: blur(10px);
         border-radius: 12px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -80,17 +80,17 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         .hero-image {
           max-width: 100%;
           margin: 0 auto;
-          margin-left: 20px;
+          /* margin-left: 20px; */
         }
         .prose {
           width: 100%;
           max-width: 900px;
           /* padding: 1em; */
-          margin-left: 40px;
+          /* margin-left: 40px; */
           margin-right: auto;
         }
         .title h1 {
-          font-size: 3em;
+          font-size: 2.5em;
         }
       }
 
@@ -98,14 +98,15 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       @media (min-width: 769px) and (max-width: 1024px) {
         .hero-image {
           max-width: 100%;
-          margin: 0 auto;
-          margin-left: 20px;
+          /* margin: 0 auto; */
+          /* margin-left: 20px;
+          margin-right: 200px !important; */
         }
         .prose {
           width: 90%;
           max-width: 800px;
           padding: 1.5em;
-          margin-left: 40px;
+          /* margin-left: 40px; */
         }
         .title h1 {
           font-size: 2.2em;
@@ -116,14 +117,15 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       @media (min-width: 1025px) and (max-width: 1200px) {
         .hero-image {
           max-width: 100%;
-          margin: 0 auto;
-          margin-left: 20px;
+          /* margin: 0 auto; */
+          /* margin-left: 20px; */
+          /* padding: 10px; */
         }
         .prose {
           width: 80%;
           max-width: 900px;
           padding: 1.5em;
-          margin-left: 90px;
+          /* margin-left: 90px; */
         }
         .title h1 {
           font-size: 2.5em;
