Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -273,6 +273,24 @@
                 margin-bottom: -200px;
             }
         }
+        @media (max-width:375px){
+            .glowing-ring {
+                width: 200px !important;
+                height: 200px !important;
+
+
+            }
+            .cta-button-container{
+                max-width: 200px;
+            }
+
+
+        }
+
+
+
+
+
         @media (max-width:1700px){
           .hero-text {
                 font-size: 2rem;
