--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -281,7 +281,15 @@
 
             }
             .cta-button-container{
-                max-width: 200px;
+                max-width: 170px;
+            }
+            .hero-text{
+                font-size: 4vw !important;
+                margin-bottom: -40px;
+                margin-top: -90px;
+            }
+            .hero-section{
+                margin-bottom: 10px;
             }
 
 
