Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -277,12 +277,22 @@
             .glowing-ring {
                 width: 200px !important;
                 height: 200px !important;
+                margin-top: -90px;
 
 
             }
             .cta-button-container{
-                max-width: 170px;
+                max-width: 150px;
+                margin-right: 20px;
+
             }
+             .cta-button-container::before{
+                margin-left: 10px;
+             }
+             .cta-button-container::after{
+                margin-left: 10px;
+             }
+
             .hero-text{
                 font-size: 4vw !important;
                 margin-bottom: -40px;
