Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -275,8 +275,8 @@
         }
         @media (max-width:375px){
             .glowing-ring {
-                width: 200px !important;
-                height: 200px !important;
+                width: 250px !important;
+                height: 250px !important;
                 margin-top: -90px;
 
 
@@ -284,23 +284,26 @@
             .cta-button-container{
                 max-width: 150px;
                 margin-right: 20px;
+                height: 45px;
+
 
             }
              .cta-button-container::before{
                 margin-left: 10px;
+
              }
              .cta-button-container::after{
                 margin-left: 10px;
              }
 
             .hero-text{
-                font-size: 4vw !important;
+                font-size: 4.9vw !important;
                 margin-bottom: -40px;
                 margin-top: -90px;
             }
-            .hero-section{
+            /* .hero-section{
                 margin-bottom: 10px;
-            }
+            } */
 
 
         }
