--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -275,8 +275,8 @@
         }
         @media (max-width:375px){
             .glowing-ring {
-                width: 250px !important;
-                height: 250px !important;
+                width: 245px !important;
+                height: 245px !important;
                 margin-top: -90px;
 
 
@@ -287,13 +287,19 @@
                 height: 45px;
 
 
+
             }
              .cta-button-container::before{
                 margin-left: 10px;
+                width: 18px;
+
+
 
              }
              .cta-button-container::after{
                 margin-left: 10px;
+                width: 18px;
+                margin-top: 2px;
              }
 
             .hero-text{
