Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -260,7 +260,7 @@
                 margin-bottom: 30px;
             }
             .glowing-ring-container{
-              margin-top: -290px;
+              margin-top: -300px;
               /* width: 20px;
               height: 30px; */
               margin-bottom: 30px;
@@ -271,6 +271,14 @@
                 /* width: 60vw;
                 height: 14vw; */
                 margin-bottom: -200px;
+                margin-right: 20px;
+            }
+            .cta-button-container::before{
+                margin-left: 10px;
+
+            }
+            .cta-button-container::after{
+                margin-left: 10px;
             }
         }
         @media (max-width:375px){
