Hero section updated

--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -45,9 +45,9 @@ const articles = [
 </section>
 
 <style>
-  * {
-    outline: 5px solid rgb(255, 162, 0) !important; /* Highlight all elements */
-  }
+  /* * {
+    outline: 5px solid rgb(255, 162, 0) !important;
+  } */
   .blog-section {
     padding: 50px 0;
     background-color: #111;
