--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -28,9 +28,9 @@ const steps = [
 </section>
 
 <style>
-  * {
-  outline: 5px solid rgb(0, 172, 172) !important; /* Highlight all elements */
-}
+  /* * {
+  outline: 5px solid rgb(0, 172, 172) !important;
+} */
   body, button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   }
