--- a/src/components/CarouselTrust.astro
+++ b/src/components/CarouselTrust.astro
@@ -33,9 +33,9 @@ const logos = [
 </section>
 
 <style>
-  * {
-  outline: 1px solid red !important; /* Highlight all elements */
-}
+  /* * {
+  outline: 1px solid red !important;
+} */
   .carousel-banner {
     display: flex;
     justify-content: center;
