--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -23,9 +23,9 @@
 </section>
 
 <style>
-  * {
-  outline: 1px solid red !important; /* Highlight all elements */
-}
+  /* * {
+  outline: 1px solid red !important;
+} */
   .contact-section {
     padding: 50px 0;
     background-color: #111;
