--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -87,9 +87,9 @@
 
   <style>
     /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
-    * {
-  outline: 1px solid red !important; /* Highlight all elements */
-}
+    /* * {
+  outline: 1px solid red !important;
+} */
 
     * {
       margin: 0;
