--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -44,9 +44,9 @@ const testimonials = [
 </section>
 
 <style>
-  * {
-  outline: 1px solid red !important; /* Highlight all elements */
-}
+  /* * {
+  outline: 1px solid red !important;
+} */
   .testimonial-section {
     padding: 50px 0;
     background-color: #111;
