--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Work - Eleven Cycles</title>
   <style>
-    * {
-  outline: 1px solid rgb(0, 255, 68) !important; /* Highlight all elements */
-}
+    /* * {
+  outline: 1px solid rgb(0, 255, 68) !important;  */
+
     /* Inline critical CSS */
     body, button {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -190,7 +190,7 @@
     @media (max-width: 480px) {
       .card {
         max-width: 90%;
-        height: 400px;
+        height: 500px;
         padding: 0 10px;
         border-radius: 20px;
       }
@@ -199,14 +199,15 @@
         padding: 10px;
       }
       .dot-container {
-        padding: 15px 0;
+       margin-left: -10px;
       }
       .dot {
         height: 12px;
         width: 12px;
+
       }
       .project-info {
-        bottom: 30px;
+        bottom: 60px;
       }
       .project-title {
         font-size: 16px;
@@ -214,6 +215,10 @@
       .project-description {
         font-size: 10px;
       }
+     .section-title{
+      font-size: 70px;
+      letter-spacing: 3px;
+     }
     }
   </style>
   <!-- Load non-critical CSS asynchronously -->
