Hero section updated

--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -286,6 +286,7 @@ const steps = [
     transition: 0.2s;
     transition-delay: 0.2s;
     box-shadow: 0 0 15px #ff1f71;
+    margin-left: 10px;
   }
 
   .cta-button-container:hover::before {
@@ -309,6 +310,7 @@ const steps = [
     transition: 0.2s;
     transition-delay: 0.2s;
     box-shadow: 0 0 15px #ff1f71;
+    margin-left: 10px;
   }
 
   .cta-button-container:hover::after {
