--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -250,13 +250,13 @@
         @media (max-width: 460px) {
 
             .hero-section {
-              margin-bottom: -30px;
+              margin-bottom: -10px;
             }
             .hero-text {
                 font-size: 5vw !important;
                 width: 95%;
-                margin-top: -50px;
-                margin-bottom: -20px;
+                margin-top: -40px;
+                margin-bottom: -30px;
             }
 
             .glowing-ring {
@@ -268,13 +268,13 @@
               margin-top: -300px;
               /* width: 20px;
               height: 30px; */
-              margin-bottom: 30px;
+              margin-bottom: 20px;
 
             }
 
             .cta-button-container {
-                /* width: 60vw;
-                height: 14vw; */
+               height: 50px;
+               width: 210px;
                 margin-bottom: -200px;
                 margin-right: 20px;
             }
