Hero section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -290,7 +290,8 @@
             .glowing-ring {
                 width: 240px !important;
                 height: 240px !important;
-                margin-top: -60px;
+                margin-top: -10px;
+                margin-bottom: 60px;
 
 
             }
